--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - ./db/data:/var/lib/postgresql/data
   app:
     build:
-      context: ./mjai
+      context: ./app
     ports:
       - 11600:11600
     depends_on:
