フロントエンドを修正

--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -17,6 +17,9 @@ http {
   server {
     listen       80;
     server_name  localhost;
+    location /api/ {
+      proxy_pass http://api:3000/;
+    }
     location /storage/ {
       alias /storage/;
       autoindex on;
