--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -17,7 +17,7 @@ http {
   server {
     listen       80;
     server_name  localhost;
-    location /api/ {
+    location / {
       proxy_pass http://api:3000/;
     }
     location /storage/ {
@@ -26,14 +26,15 @@ http {
       autoindex_exact_size off;
       autoindex_localtime on;
     }
-    location / {
-      root   /app;
-      index  index.html;
-      try_files $uri $uri/ /index.html;
-    }
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
       root   /usr/share/nginx/html;
     }
+  }
+}
+stream {
+  server {
+    listen     11600;
+    proxy_pass mjai-recorder-app-1:11600;
   }
 }
