フロントエンドを修正

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,6 +6,7 @@ COPY ./nuxt/ .
 RUN npx nuxi build
 
 FROM node:lts-alpine as production-stage
-RUN mkdir /app
+WORKDIR /app
 COPY --from=build-stage /app/.output /app
-CMD ["node", "/app/server/index.mjs"]
+RUN npm install pg
+CMD ["node", "./server/index.mjs"]
