--- a/api/nuxt/package.json
+++ b/api/nuxt/package.json
@@ -8,6 +8,13 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "^3.1.2"
+    "nuxt": "^3.1.2",
+    "sass": "^1.58.0",
+    "vuetify": "^3.1.2"
+  },
+  "dependencies": {
+    "pg": "^8.9.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.28.0"
   }
 }
