環境変数GAME_TYPEを追加

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,11 +1,11 @@
-FROM node:lts-alpine as build-stage
+FROM node:lts-alpine AS build-stage
 WORKDIR /app
 COPY nuxt/package*.json ./
 RUN npm install
 COPY ./nuxt/ .
 RUN npx nuxi build
 
-FROM node:lts-alpine as production-stage
+FROM node:lts-alpine AS production-stage
 WORKDIR /app
 COPY --from=build-stage /app/.output /app
 RUN npm install pg
